welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:7: error: ')' expected but 'if' found.
	if (((Math.min(a,b)>=10 && Math.min(a,b)<=20))
        ^max1020:10: error: ')' expected but 'else' found.
	} else
          ^max1020:15: error: Unmatched closing brace '}' ignored here
 }
 ^